--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="main white">
       <div class="h1">
-        <h1>What will you <span id="design">design</span> today?</h1>
+        <h1>What will you <span id="design">design</span> tomorrow?</h1>
       </div>
       <button id="btn">Dark</button>
       <p class="passage1">
